<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listreportRowModel" type="com.se_application.app.modules.parentviewtwo.data.model.ListreportRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowreport"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtReport"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14pxv"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_weight="0.23" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listreportRowModel.txtReport}"
            style="@style/txtIntersemibold13" tools:text="@string/lbl_report"/>
        <TextView android:id="@+id/txtInstructorName"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_35pxh"
            android:layout_weight="0.33" android:layout_width="0dp"
            android:text="@{listreportRowModel.txtInstructorName}"
            style="@style/txtIntersemibold13" tools:text="@string/lbl_instructor_name"/>
        <TextView android:id="@+id/txtDateTime"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.22" android:layout_width="0dp"
            android:text="@{listreportRowModel.txtDateTime}"
            style="@style/txtIntersemibold13" tools:text="@string/lbl_date_time"/>
        <TextView android:id="@+id/txtActionTaken"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.22" android:layout_width="0dp"
            android:text="@{listreportRowModel.txtActionTaken}"
            style="@style/txtIntersemibold13" tools:text="@string/lbl_action_taken2"/>
    </LinearLayout>
</layout>
