<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="start"
        android:id="@+id/linearParentViewT"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyledeep_orange_A400_d8">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGrade6Secti"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_55pxh"
                        android:layout_weight="0.87"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"
                        style="@style/txtInterextrabold18_1" tools:text="@string/msg_grade_6_secti"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowellipsefive"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_34pxv"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageEllipseFive"
                    android:layout_height="@dimen/_128pxh"
                    android:layout_width="@dimen/_129pxh"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse5"/>
                <TextView android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_weight="0.62"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    style="@style/txtInterextrabold18_1" tools:text="@string/msg_name_joe_james"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowreports"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtReports"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.32" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                style="@style/txtInterextrabold18_2" tools:text="@string/lbl_reports"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOnJan23202"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_96pxh"
                android:layout_weight="0.68" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                style="@style/txtInterextrabold18_2"
                textUnderline="true" tools:text="@string/msg_on_jan_23_202"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnreport"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyledeep_orange_A100">
            <androidx.recyclerview.widget.RecyclerView
                android:gravity="center_horizontal"
                android:id="@+id/recyclerListreport"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2" tools:listitem="@layout/row_listreport"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDescriptionOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtInterbold13" tools:text="@string/lbl_description"/>
            <View android:background="@color/white_A700"
                android:id="@+id/viewRectangleTwentyTwo"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_62pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_335pxh"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnFeedback"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_275pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_6pxh"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_feedback"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_7" textUnderline="true" tools:text="@string/lbl_feedback"/>
            <LinearLayout android:id="@+id/linearRowfightwithafrOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:id="@+id/txtFightwithafrOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_weight="0.27"
                    android:layout_width="0dp"
                    style="@style/txtInterregular13_2" tools:text="@string/msg_fight_with_a_f"/>
                <TextView android:id="@+id/txtChadiBouRjeil"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.23"
                    android:layout_width="0dp"
                    style="@style/txtInterregular13_2" tools:text="@string/msg_chadi_bou_rjeil"/>
                <TextView android:id="@+id/txtTimeOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.31"
                    android:layout_width="0dp"
                    style="@style/txtInterregular13_2" tools:text="@string/msg_dec_10_2022_12"/>
                <TextView android:id="@+id/txtVerbalWarning"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.19"
                    android:layout_width="0dp"
                    style="@style/txtInterregular13_2" tools:text="@string/lbl_verbal_warning"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDescriptionTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtInterbold13" tools:text="@string/lbl_description"/>
            <View android:background="@color/white_A700"
                android:id="@+id/viewRectangleTwentyThree"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_62pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_335pxh"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnFeedbackOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_275pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_6pxh"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_feedback"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_7" textUnderline="true" tools:text="@string/lbl_feedback"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowtotalperday"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_43pxv"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTotalperday"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.91"
                    android:layout_width="0dp" android:singleLine="true"
                    style="@style/txtInterbold16_1" tools:text="@string/lbl_total_per_day"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_43pxh"
                    android:layout_weight="0.09"
                    android:layout_width="0dp" android:singleLine="true"
                    style="@style/txtInterbold16_1" tools:text="@string/lbl_22"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
